SUBDIRS = libhpx

nobase_include_HEADERS = hpx/action.h \
                         hpx/addr.h \
                         hpx/attributes.h \
                         hpx/builtins.h \
                         hpx/gas.h \
                         hpx/hpx.h \
                         hpx/lco.h \
                         hpx/par.h \
                         hpx/parcel.h \
                         hpx/process.h \
                         hpx/rpc.h \
                         hpx/runtime.h \
                         hpx/thread.h \
                         hpx/time.h \
                         hpx/topology.h \
                         hpx/types.h \
                         libapex/apex_global_hpx.h \
                         libsync/backoff.h \
                         libsync/barriers.h \
                         libsync/cptr.h \
                         libsync/deques.h \
                         libsync/generic.h \
                         libsync/locks.h \
                         libsync/lockable_ptr.h \
                         libsync/queues.h \
                         libsync/sync.h \
                         libsync/types.def \
                         libsync/gcc/sync.h \
                         libsync/gcc/atomic.h \
                         libsync/craycc/sync.h \
                         libhpx/libhpx.h \
                         libhpx/config.h \
                         libhpx/options.def

if HAVE_HPXPP
nobase_include_HEADERS += hpx/hpx++.h \
                          hpx/cxx/action.h \
                          hpx/cxx/global_ptr.h \
                          hpx/cxx/lco.h \
                          hpx/cxx/runtime.h \
                          hpx/cxx/system.h
endif
