SUBDIRS = util

noinst_HEADERS = action.h \
                 attach.h \
                 bitmap.h \
                 boot.h \
                 CollectiveOps.h \
                 debug.h \
                 events.h \
                 gas.h \
                 gpa.h \
                 instrumentation.h \
                 lco.h \
                 LCOOps.h \
                 locality.h \
                 memory.h \
                 MemoryOps.h \
                 c_network.h \
                 Network.h \
                 padding.h \
                 parcel.h \
                 ParcelOps.h \
                 ParcelStringOps.h \
                 percolation.h \
                 process.h \
                 rebalancer.h \
                 c_scheduler.h \
                 Scheduler.h\
                 StringOps.h \
                 system.h \
                 termination.h \
                 time.h \
                 topology.h \
                 utils.h \
                 Worker.h


