# The action registration convenience library
noinst_LTLIBRARIES       = libactions.la
noinst_HEADERS           = 

libactions_la_CPPFLAGS = -I$(top_srcdir)/include $(LIBHPX_CPPFLAGS)
libactions_la_CFLAGS   = $(LIBHPX_CFLAGS)
libactions_la_SOURCES  = execution.c registration.c allocation.c table.c \
                         action_glue.c
